Update email address in contact button

--- a/dio-lab-portfolio-main/index.html
+++ b/dio-lab-portfolio-main/index.html
@@ -331,7 +331,7 @@
         </a>
       </li>
     </ul>
-    <a href="mailto:elidianaandrade@outlook.com">
+    <a href="mailto:caio.emnl.silva@gmail.com">
       <button class="btn btn--primary">
         <span class="email">caio.emnl.silva@gmail.com</span>
       </button>  
